@@ -32,27 +32,19 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 
 public class PathSummaryCreator{
 
 	private List<Edge> reconstructPathFromPredecessorTree(Vertex from, Vertex to, Map<Vertex, Edge> predecessorTree){
 		var result = new ArrayList<Edge>();
-
 		var currNode = from;
-
-		while(predecessorTree.containsKey(currNode) && ! currNode.equals(to)){
+		while(predecessorTree.containsKey(currNode) && !currNode.equals(to)){
 			var edge = predecessorTree.get(currNode);
 			result.add(edge);
 			currNode = edge.getFrom();
 		}
-
-		if(! currNode.equals(to)){
-			return new ArrayList<>();
-		}
-
-		return result;
+		return (currNode.equals(to)? result: new ArrayList<>());
 	}
 
 	public PathSummary createUnidirectionalPath(Vertex start, Vertex end, Map<Vertex, Edge> predecessorTree){
@@ -63,18 +55,17 @@ public class PathSummaryCreator{
 		return new SingleDirectionalPathSummary(fromEndToStart, predecessorTree.keySet());
 	}
 
-	public PathSummary createBidirectionalPath(Vertex start, Vertex mid, Vertex end, Map<Vertex, Edge> predecessorTreeStart, Map<Vertex, Edge> predecessorTreeEnd){
+	public PathSummary createBidirectionalPath(Vertex start, Vertex mid, Vertex end, Map<Vertex, Edge> predecessorTreeStart,
+			Map<Vertex, Edge> predecessorTreeEnd){
 		var fromMidToStart = reconstructPathFromPredecessorTree(mid, start, predecessorTreeStart);
 		Collections.reverse(fromMidToStart);
 
 		var fromEndToMid = reconstructPathFromPredecessorTree(mid, end, predecessorTreeEnd);
 
-		if((start != mid && fromMidToStart.isEmpty()) || (end != mid && fromEndToMid.isEmpty())){
+		if((start != mid && fromMidToStart.isEmpty()) || (end != mid && fromEndToMid.isEmpty()))
 			return new BidirectionalPathSummary(Collections.emptyList(), predecessorTreeStart.keySet(), predecessorTreeEnd.keySet());
-		}
 
-		fromMidToStart.addAll(fromEndToMid.stream().map(Edge::reversed).collect(Collectors.toList()));
-
+		fromMidToStart.addAll(fromEndToMid.stream().map(Edge::reversed).toList());
 		return new BidirectionalPathSummary(fromMidToStart, predecessorTreeStart.keySet(), predecessorTreeEnd.keySet());
 	}
 
